@@ -1,5 +1,6 @@
 mpdscribble 0.21 - not yet released
   * better HTTP error messages
+  * curl: check the HTTP response status
 
 
 mpdscribble 0.20 - 2010-09-22
